tests/baselines/reference/namespaceAssignmentToRequireAlias.errors.txt
bug40140.js(1,19): error TS7016: Could not find a declaration file for module 'untyped'. 'node_modules/untyped/index.js' implicitly has an 'any' type.


==== bug40140.js (1 errors) ====
    const u = require('untyped');
                      ~~~~~~~~~
!!! error TS7016: Could not find a declaration file for module 'untyped'. 'node_modules/untyped/index.js' implicitly has an 'any' type.
    u.assignment.nested = true
    u.noError()
    
    
==== node_modules/untyped/index.js (0 errors) ====
    module.exports = {}
    